[tool.poetry]
name = "wuying-agentbay-sdk"
version = "0.1.0"
description = "Python SDK for interacting with the Wuying AgentBay cloud runtime environment"
readme = "README.md"
packages = [{include = "wuying_agentbay"}]

[tool.poetry.dependencies]
python = ">=3.12"
darabonba-core = ">=1.0.0,<2.0.0"
alibabacloud-tea-openapi = "0.4.0rc3"
httpx = "^0.28.1"
cryptography = "^45.0.2"
alibabacloud-tea-util = "^0.3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
